# copipy

./: .gitignore  README.md  setup.cfg  setup.py
src/main/: __init__.py  cli.py  tree.py
