[metadata]
name = copipy
version = 0.0.1
author = Sudoer
author_email = sudoer.zero@gmail.com
description = Adding copyright to your project files is now easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sudoer-zero/copipy
project_urls =
    Bug Tracker = https://github.com/sudoer-zero/copipy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src